--- a/Hello/pom.xml
+++ b/Hello/pom.xml
@@ -111,8 +111,13 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!-- Maven Checkstyle Plugin for code style checking -->
+                 <!-- SonarQube Maven Plugin -->
+           <plugin>
+               <groupId>org.sonarsource.scanner.maven</groupId>
+               <artifactId>sonar-maven-plugin</artifactId>
+               <version>3.7.0.1746</version>
+         </plugin>
+                <!-- Maven Checkstyle Plugin for code style checking -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
